[workspace]
members = ["bin/vspr", "bin/vspr-ui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "Visual Scripting and Programming for Robotics"
edition = "2021"
documentation = ""
license = "Apache-2.0"
repository = "https://github.com/VisualSPR/vspr"

[workspace.dependencies]
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
